All desktop pages are ready.

--- a/src/main/webapp/WEB-INF/html-temp/add-wishlist.html
+++ b/src/main/webapp/WEB-INF/html-temp/add-wishlist.html
@@ -12,8 +12,8 @@
 
 <!-- Header: display of metainfo and logo. -->
 <div id="header">
-    <div id="main-title">iWish</div>
-    <div id="main-subtitle">Driven by the wishflow &nbsp; :::::::::::: &nbsp; Powered by the dreams</div>
+    <div id="header-title">iWish</div>
+    <div id="header-subtitle">Driven by the wishflow &nbsp; :::::::::::: &nbsp; Powered by the dreams</div>
 
     <div style="float: left; margin-left: 15pt; margin-top: -15pt;">
         <div style="float: left; margin-top: 3pt;">Hello, Denys</div>
