--- a/src/main/webapp/WEB-INF/html-temp/register-from-home.html
+++ b/src/main/webapp/WEB-INF/html-temp/register-from-home.html
@@ -12,8 +12,8 @@
 
 <!-- Header: display of metainfo and logo. -->
 <div id="header">
-	<div id="main-title">iWish</div>
-	<div id="main-subtitle">Driven by the wishflow &nbsp; :::::::::::: &nbsp; Powered by the dreams</div>
+	<div id="header-title">iWish</div>
+	<div id="header-subtitle">Driven by the wishflow &nbsp; :::::::::::: &nbsp; Powered by the dreams</div>
 </div>
 
 
