--- a/src/main/webapp/WEB-INF/html-temp/add-giftlist.html
+++ b/src/main/webapp/WEB-INF/html-temp/add-giftlist.html
@@ -12,19 +12,19 @@
 
 <!-- Header: display of metainfo and logo. -->
 <div id="header">
-    <div id="main-title">iWish</div>
-    <div id="main-subtitle">Driven by the wishflow &nbsp; :::::::::::: &nbsp; Powered by the dreams</div>
+    <div id="header-title">iWish</div>
+    <div id="header-subtitle">Driven by the wishflow &nbsp; :::::::::::: &nbsp; Powered by the dreams</div>
 
-    <div style="float: left; margin-left: 15pt; margin-top: -15pt;">
-        <div style="float: left; margin-top: 3pt;">Hello, Denys</div>
-        <div style="float: left; margin-left: 5pt; margin-top: 3pt;"><a>(not you?)</a></div>
-        <button class="btn btn-info" style="margin-left: 15pt;">Logout</button>
+    <div id="header-left-region">
+        <div id="header-hello-lbl">Hello, Denys</div>
+        <div id="header-not-you-lnk"><a>(not you?)</a></div>
+        <button class="btn btn-info m-left-15">Logout</button>
     </div>
 
-    <div style="float: right; margin-right: 15pt; margin-top: -15pt;">
+    <div id="header-right-region">
         <button class="btn btn-warning">Cancel</button>
-        <button class="btn btn-info" style="margin-left: 10pt;">Friends</button>
-        <button class="btn btn-info" style="margin-left: 10pt;">Workshop</button>
+        <button class="btn btn-info m-left-10">Friends</button>
+        <button class="btn btn-info m-left-10">Workshop</button>
     </div>
 </div>
 
