--- a/src/main/webapp/WEB-INF/html-temp/friends.html
+++ b/src/main/webapp/WEB-INF/html-temp/friends.html
@@ -22,7 +22,7 @@
 	</div>
 
 	<div style="float: right; margin-right: 15pt; margin-top: -15pt;">
-		<button class="btn btn-warning">Edit</button>
+		<button class="btn btn-danger">RM</button>
 		<button class="btn btn-info" style="margin-left: 10pt;">Friends</button>
 		<button class="btn btn-info" style="margin-left: 10pt;">Workshop</button>
 	</div>
@@ -34,43 +34,30 @@
 	<!-- Forwarder: navigate user to login/register/start. -->
 	<div id="navigation">
 		<div class="white-dashed-bottom nav-block">
-			<div class="nav-title">Your Categories:</div>
-			<div class="nav-empty-elm">Default CAT</div>
-			<button class="btn btn-success nav-btn">Add Category</button>
+			<div class="nav-title">Pending Approve:</div>
+			<div class="nav-empty-elm">Some friend</div>
+			<button class="btn btn-success" style="float: left; width: 50%;">Approve</button>
+			<button class="btn btn-danger" style="float: left; width: 50%;">Reject</button>
 		</div>
-		<div class="white-dashed-bottom nav-block">
-			<div class="nav-title">Your Wishlists:</div>
-			<div class="nav-empty-elm">No wishlists, yet</div>
-			<button class="btn btn-success nav-btn">Add Wishlist</button>
-		</div>
-		<div class="nav-block">
-			<div class="nav-title">Your Giftlists:</div>
-			<div class="nav-empty-elm">No giftlists, yet</div>
-			<button class="btn btn-success nav-btn">Add Giftlist</button>
+		<div class="nav-block" style="margin-top: 20px;">
+			<div class="nav-title">Friends:</div>
+			<div class="nav-empty-elm">First Last</div>
+			<button class="btn btn-success nav-btn">Giftlist 1</button>
+			<button class="btn btn-success nav-btn">Giftlist 2</button>
 		</div>
 	</div>
 
 	<div id="searchbox">
-		<button id="add-wish-btn" class="btn btn-success">Add Wish</button>
 		<input type="text" id="search-input" />
 		<button id="search-btn" class="btn btn-success">Search</button>
-		<div id="search-radio-wrp">
-			<input type="radio" name="group1" value=""> By Wish 
-			<br />
-			<input type="radio" name="group1" value="" checked> By Category
-		</div>
 	</div>
 
 	<div id="stage">
 		<div style="float: left; min-width: 800px; max-width: 1100px; min-height: 30pt; font-size: 20pt; margin-left: 25px; margin-top: 10px; text-align: center;">
-			<span style="color: grey">Category: </span>Here goes the title
+			<span style="color: grey">Friend: </span>First Last
+			<span style="color: grey">Giftlist: </span>Giftlist 1
 		</div>
 
-		<div id="demo-wish">
-			<img src="../image/arrow-up.jpg" id="demo-wish-img" />
-			<div id="demo-wish-title">Add new wish</div>
-			<div id="demo-wish-text">... and few ones more</div>
-		</div>
 	</div>
 
 </div>
